2010-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/src/aio_cancel.c: Spray pthread_mutex_unlocks.
	* posix/src/aio_read.c: aio_nbytes is always >= 0.
	* posix/src/aio_write.c: aio_nbytes is always >= 0.
	Fix typo in comment.

2010-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/include/sys/utsname.h: Remove times().
	Remove unnecessary includes.
	Introduce SYS_NMLN (From freebsd).
	* libcsupport/src/utsname.c: Rework uname().

2010-08-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/read.c, libcsupport/src/write.c: Remove redundant
	check for 0 size request.

2010-08-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/open.c: Spacing.

2010-08-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libi2c/libi2c.c: Fix typo in va_end().

2010-08-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libblock/src/flashdisk.c, libblock/src/nvdisk.c,
	libcsupport/src/ioctl.c, libfs/src/dosfs/fat_file.c: Add va_end().

2010-08-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	CID 79/DEADCODE
	CID 78/DEADCODE
	CID 77/DEADCODE
	CID 76/DEADCODE
	* posix/src/condtimedwait.c, posix/src/mutextimedlock.c,
	posix/src/prwlocktimedrdlock.c, posix/src/prwlocktimedwrlock.c,
	posix/src/semtimedwait.c: Resolve various dead code issues identified
	by Coverity scanner.

2010-08-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	CID 99
	CID 100
	CID 101
	CID 102
	* libfs/src/dosfs/fat_file.c, libfs/src/dosfs/msdos.h,
	libfs/src/dosfs/msdos_misc.c: Resolve invalid use of const identified
	by Coverity scanner.

2010-08-23	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1673/cpukit
	* score/src/chainappendempty.c, score/src/chaingetempty.c,
	score/src/chainprependempty.c: New files.
	* score/Makefile.am: Reflect changes above.
	* score/include/rtems/score/chain.h: Declare
	_Chain_Append_with_empty_check(), _Chain_Prepend_with_empty_check(),
	and _Chain_Get_with_empty_check().
	* score/inline/rtems/score/chain.inl: Define