@@ -254,7 +254,7 @@ Untar_FromFile(
 {
    int            fd;
    char           *bufr;
-   size_t         n;
+   ssize_t        n;
    char           fname[100];
    char           linkname[100];
    int            sum;
@@ -265,15 +265,17 @@ Untar_FromFile(
    unsigned long  size;
    unsigned char  linkflag;
 
-
    retval = UNTAR_SUCCESSFUL;
-   bufr = (char *)malloc(512);
-   if (bufr == NULL)
-   {
-      return(UNTAR_FAIL);
+
+   if ((fd = open(tar_name, O_RDONLY)) < 0) {
+       return UNTAR_FAIL;
    }
 
-   fd = open(tar_name, O_RDONLY);
+   bufr = (char *)malloc(512);
+   if (bufr == NULL) {
+      return(UNTAR_FAIL);
+   }
+   
    while (1)
    {
       /* Read the header */
