@@ -1,11 +1,13 @@
-2010-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>
+2010-08-24	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* libmisc/untar/untar.c: Return if open fails.
+	Use ssize_t for read() return value.
 	* posix/src/aio_cancel.c: Spray pthread_mutex_unlocks.
 	* posix/src/aio_read.c: aio_nbytes is always >= 0.
 	* posix/src/aio_write.c: aio_nbytes is always >= 0.
 	Fix typo in comment.
 
-2010-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>
+2010-08-24	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* libcsupport/include/sys/utsname.h: Remove times().
 	Remove unnecessary includes.
